crates/tokmd-analysis-format/tests/snapshots/snapshot_v2__v2_jsonld_eco_label.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_v2.rs
expression: rendered
---
{
  "@context": "https://schema.org",
  "@type": "SoftwareSourceCode",
  "codeLines": 0,
  "commentCount": 0,
  "fileSize": 0,
  "interactionStatistic": {
    "@type": "InteractionCounter",
    "interactionType": "http://schema.org/ReadAction",
    "userInteractionCount": 0
  },
  "lineCount": 0,
  "name": "."
}
