crates/tokmd-analysis-format/tests/snapshots/snapshot_v2__v2_md_duplicates.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_v2.rs
expression: rendered
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Duplicates

- Wasted bytes: `512`
- Strategy: `blake3`

|Hash|Bytes|Files|
|---|---:|---:|
|abc123|512|2|
