crates/tokmd-analysis-format/tests/snapshots/snapshot_v2__v2_md_warnings.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_v2.rs
expression: rendered
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
