crates/tokmd-analysis-format/tests/snapshots/snapshot_v2__v2_xml_complexity.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_v2.rs
expression: rendered
---
<analysis></analysis>
